--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,10 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-security')
+	compile('org.springframework.security:spring-security-jwt:1.0.8.RELEASE')
+	compile('org.springframework.security.oauth:spring-security-oauth2:2.2.0.RELEASE')
 	compile('org.projectlombok:lombok:1.16.20')
 	runtime('com.h2database:h2')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile('org.springframework.security:spring-security-test')
 }
