--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,17 @@ server.servlet.context-path=/api
 spring.h2.console.enabled=true
 logging.level.org.springframework.security=DEBUG
 
-
 security.oauth2.resource.filter-order=3
 
 security.signing-key=MaYzkSjmkzPC57L
-security.encoding-strength=256
 security.security-realm=Spring Boot JWT Example Realm
 
 security.jwt.client-id=testjwtclientid
-security.jwt.client-secret=XY7kmzoNzl100
+#security.jwt.client-secret=XY7kmzoNzl100
+security.jwt.client-secret=$2a$12$uGG6h0saYfCpVb.cUum9W.FytZWUwVwuXIbHzvAAQSPHGdP0uT8fy
 security.jwt.grant-type=password
 security.jwt.scope-read=read
 security.jwt.scope-write=write
 security.jwt.resource-ids=testjwtresourceid
+
+// curl testjwtclientid:XY7kmzoNzl100@localhost:8080/api/oauth/token -d grant_type=password -d username=admin -d password=admin
