--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,8 @@ security.oauth2.resource.filter-order=3
 
 security.signing-key=MaYzkSjmkzPC57L
 security.security-realm=Spring Boot JWT Example Realm
-
 security.jwt.client-id=testjwtclientid
-#security.jwt.client-secret=XY7kmzoNzl100
+# Raw Client Secret = XY7kmzoNzl100
 security.jwt.client-secret=$2a$12$uGG6h0saYfCpVb.cUum9W.FytZWUwVwuXIbHzvAAQSPHGdP0uT8fy
 security.jwt.grant-type=password
 security.jwt.scope-read=read
