--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ logging.level.org.springframework.security=DEBUG
 
 security.oauth2.resource.filter-order=3
 
+security.security-strength=12
 security.signing-key=MaYzkSjmkzPC57L
 security.security-realm=Spring Boot JWT Example Realm
 security.jwt.client-id=testjwtclientid
