Updated OAuth2 code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,14 @@ security.oauth2.resource.filter-order=3
 
 security.security-strength=12
 security.signing-key=MaYzkSjmkzPC57L
-security.security-realm=Spring Boot JWT Example Realm
-security.jwt.client-id=testjwtclientid
-# Raw Client Secret = XY7kmzoNzl100
-security.jwt.client-secret=$2a$12$uGG6h0saYfCpVb.cUum9W.FytZWUwVwuXIbHzvAAQSPHGdP0uT8fy
+security.security-realm=Journey Through Spring Auction
+security.jwt.client-id=jtsauctionclient
+# Raw Client Secret = WELU9g3wuZm51
+# BCrypt Generated with https://www.dailycred.com/article/bcrypt-calculator
+security.jwt.client-secret=$2a$12$Hb1Gd7GzqlkXEVFDmGnj2.1W3/AbM5aKFyrfGkAe12F/HsbqPIIO2
 security.jwt.grant-type=password
 security.jwt.scope-read=read
 security.jwt.scope-write=write
-security.jwt.resource-ids=testjwtresourceid
+security.jwt.resource-ids=jtsauctionapi
 
-// curl testjwtclientid:XY7kmzoNzl100@localhost:8080/api/oauth/token -d grant_type=password -d username=admin -d password=admin
+# curl jtsauctionclient:WELU9g3wuZm51@localhost:8080/api/oauth/token -d grant_type=password -d username=admin -d password=admin
