Integration tests passing with OAuth2

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,9 +2,8 @@ security.security-strength=12
 security.signing-key=MaYzkSjmkzPC57L
 security.security-realm=Journey Through Spring Auction
 security.jwt.client-id=jtsauctionclient
-# Raw Client Secret = WELU9g3wuZm51
-# BCrypt Generated with https://www.dailycred.com/article/bcrypt-calculator
 security.jwt.client-secret=$2a$12$Hb1Gd7GzqlkXEVFDmGnj2.1W3/AbM5aKFyrfGkAe12F/HsbqPIIO2
+security.jwt.raw-client-secret=WELU9g3wuZm51
 security.jwt.grant-type=password
 security.jwt.scope-read=read
 security.jwt.scope-write=write
