--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.servlet.context-path=/api
 
+logging.level.com.jahnelgroup=DEBUG
+
 spring.h2.console.enabled=true
 
 security.security-strength=12
