--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-security')
+	compile('org.springframework.security:spring-security-acl')
+
+	//compile('org.springframework.security:spring-security-config')
 	compile('org.springframework.security:spring-security-jwt:1.0.8.RELEASE')
 	compile('org.springframework.security.oauth:spring-security-oauth2:2.2.0.RELEASE')
 	compile('org.projectlombok:lombok:1.16.20')
