--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 server.servlet.context-path=/api
 
 logging.level.com.jahnelgroup=DEBUG
+logging.level.org.springframework.security.acls=TRACE
 
+spring.datasource.initialization-mode=always
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.enabled=true
 
 security.security-strength=12
@@ -17,3 +23,7 @@ security.jwt.scope-write=write
 security.jwt.resource-ids=jtsauctionapi
 
 # curl jtsauctionclient:WELU9g3wuZm51@localhost:8080/api/oauth/token -d grant_type=password -d username=admin -d password=admin
+
+# AOP
+spring.aop.auto=true
+spring.aop.proxy-target-class=true
