--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.servlet.context-path=/api
 
-logging.level.com.jahnelgroup=DEBUG
+logging.level.com.jahnelgroup=TRACE
 logging.level.org.springframework.security.acls=TRACE
 
 spring.datasource.initialization-mode=always
