--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=
 spring.datasource.url=jdbc:h2:mem:auction;DB_CLOSE_DELAY=-1;MODE=MySQL;DB_CLOSE_ON_EXIT=FALSE
 
 spring.h2.console.enabled=true
+
+security.security-strength=12
